Fix slider widget tooltip overflow

--- a/axelor-front/src/views/form/widgets/slider/slider.module.scss
+++ b/axelor-front/src/views/form/widgets/slider/slider.module.scss
@@ -26,12 +26,13 @@ $sliderSize: $height * 2;
 
 .tooltip {
   position: absolute;
-  top: -45px;
   padding: 5px;
   padding-left: 10px;
   padding-right: 10px;
   border-radius: 20px;
   transform: translateX(-50%);
+  transition: opacity 0.2s ease;
+  pointer-events: none;
 
   &::after {
     position: absolute;
